Cleaned up File paths and renamed node.js file

--- a/Public/views/pages/index.html
+++ b/Public/views/pages/index.html
@@ -16,7 +16,7 @@
 <!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 <div class="container-fluid">
-	<a class="navbar-brand" href="#"><img class="nav-logo" src="img/pokeball-logo.png"></a>
+	<a class="navbar-brand" href="#"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -26,7 +26,7 @@
 				<a class="nav-link" href="#">Home</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/pokedex.html">Pokedex</a>
+				<a class="nav-link" href="./pokedex.html">Pokedex</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Battle</a>
@@ -55,7 +55,7 @@
 	<div class="carousel-inner">
 
 		<div class="carousel-item active ">
-			<img src="img/background.png">
+			<img src="./img/background.png">
 			<div class="carousel-caption">
 				<h1 class="display-2">Pokemon</h1>
 				<h3>Web Systems Project</h3>
@@ -65,11 +65,11 @@
 		</div>
 
 		<div class="carousel-item">
-			<img src="img/background2.png">
+			<img src="./img/background2.png">
 		</div>
 
 		<div class="carousel-item">
-			<img src="img/background3.png">
+			<img src="./img/background3.png">
 		</div>
 	</div>
 </div>
