Added pokedex page

--- a/views/pages/segments/navbar.ejs
+++ b/views/pages/segments/navbar.ejs
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pokedex.html">Pokedex</a>
+                    <a class="nav-link" href="/pokedex">Pokedex</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Battle</a>
