--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,33 @@
 <body>
 
 <!-- Top Nav Bar -->
-<%- include('segments/navbar.ejs') %>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pokedex">Pokedex</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Battle</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">LogIn/SignUp</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    </nav>
 
 
 <!--- Header Slide Show -->
@@ -56,6 +82,8 @@
 
 <!-- Footer -->
 <%- include('segments/footer.ejs') %>
+
+
 </body>
 </html>
 
