--- a/views/pages/pokedex.ejs
+++ b/views/pages/pokedex.ejs
@@ -9,7 +9,7 @@
 <!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
+        <a class="navbar-brand" href="/"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,16 +33,22 @@
             </ul>
         </div>
     </div>
-    </nav>
+</nav>
+
+
 
 <!-- Holds all of the pokemon cards-->
 <div id="poke-container">
-<script type="text/javascript" src="/scripts/bundle.js"></script>
-<script type="text/javascript" src="/scripts/pokedexScript.js"></script>
+
+
 </div>
 
 <!-- Footer -->
 <%- include('segments/footer.ejs') %>
+
+<!-- Script to fill in the pokemon info-->    
+<script type="text/javascript" src="scripts/browserify-scripts/pokedexFinal.js"></script>
+
 
 </body>
 </html>
