More edit to pokemon cards
Cards displayed in rows of three,
Images shown at decent size,
Issue where pokemon sometiems don't load in correct order

--- a/views/pages/pokedex.ejs
+++ b/views/pages/pokedex.ejs
@@ -38,7 +38,10 @@
 
 
 <!-- Holds all of the pokemon cards-->
-<div id="poke-container">
+<div class="container-fluid padding">
+    <div class="row text-center padding" id="poke-container">
+
+    </div>
 
 
 </div>
