--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -64,14 +64,26 @@ hr.light {
 }
 
 /* Pokedex Css Section */
-.pokeCard .img {
-  width: 10%;
-  height: 10%;
+.card {
+  width: 20px;
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-
-
-
-
+.card-title::first-letter {
+  text-transform: capitalize;
+}
+.card-title {
+  background-color: #3f3f3f;
+  color: #ffff;
+  width: 100%;
+}
+.card-img-top {
+  width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 /*---Media Queries --*/
