Minor CSS changes

--- a/views/pages/pokedex.ejs
+++ b/views/pages/pokedex.ejs
@@ -39,7 +39,7 @@
 
 <!-- Holds all of the pokemon cards-->
 <div class="container-fluid padding">
-    <div class="row text-center padding" id="poke-container">
+    <div class="row text-center padding centre" id="poke-container">
 
     </div>
 
