Changed index header buttons

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -51,8 +51,8 @@
 			<div class="carousel-caption">
 				<h1 class="display-2">Pokemon</h1>
 				<h3>Web Systems Project</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">VIEW KANTO</button>
-				<button type="button" class="btn btn-primary btn-lg">VIEW JHOTO</button>
+				<button type="button" class="btn btn-outline-light btn-lg">POKEDEX</button>
+				<button type="button" class="btn btn-primary btn-lg">BATTLE</button>
 			</div>
 		</div>
 
