--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('segments/header.ejs') %>
+    <%- include('segments/header.ejs'); %>
     <!-- <script type="text/javascript" src="scripts/browserify-scripts/getLoginInput.js"></script> -->
 
 </head>
@@ -11,7 +11,7 @@
     <!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
+        <a class="navbar-brand" href="/"><img class="nav-logo" src="../../img/pokeball-logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/register">Sign Up</a>
+                    <a class="nav-link" href="/user/register">Sign Up</a>
                 </li>
             </ul>
         </div>
@@ -45,10 +45,15 @@
         <h1 class="text-center mb-3">
           <i class="fas fa-user-plus"></i> Register
         </h1>
-        <form action="/users/register" method="POST">
+        
+
+        <%- include('segments/message.ejs') %>
+                
+
+        <form action="/user/register" method="POST">
 
           <div class="form-group">
-            <label for="name">New Username</label>
+            <label for="username">New Username</label>
             <input
               type="name"
               id="username"
@@ -87,7 +92,7 @@
             Register
           </button>
         </form>
-        <p class="lead mt-4">Already made an account? <a href="/login">Login</a></p>
+        <p class="lead mt-4">Already have an account? <a href="/user/login">Login</a></p>
       </div>
     </div>
   </div>
@@ -98,5 +103,10 @@
 
 <!-- Footer -->
 <%- include('segments/footer.ejs') %>
+
+<!-- Bootstrap Scripts-->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
