--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login">LogIn/SignUp</a>
+                    <a class="nav-link" href="/user/login">Log In</a>
                 </li>
             </ul>
         </div>
