Began work on battle page

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="/pokedex">Pokedex</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Battle</a>
+                    <a class="nav-link" href="/battle">Battle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -39,8 +39,16 @@
     </div>
 </nav>
 
-<p class="lead mb-3">Welcome <%= user.username %></p>
+<!--The users pokemone team-->
+<div id="team">
 
+</div>
+
+<p class="lead mb-3">Welcome <%- user.username; %> How are you </p>
+
+<script>
+
+</script>
 
 
 <!-- Footer -->
