--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/pokedex">Pokedex</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Battle</a>
+                  <a class="nav-link" href="/battle">Battle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
