--- a/views/pages/pokedex.ejs
+++ b/views/pages/pokedex.ejs
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/pokedex">Pokedex</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Battle</a>
+                    <a class="nav-link" href="/game/battle">Battle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
