--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="/pokedex">Pokedex</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/battle">Battle</a>
+                    <a class="nav-link" href="/game/battle">Battle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
