Reverted some changes

--- a/views/pages/battle.ejs
+++ b/views/pages/battle.ejs
@@ -7,8 +7,6 @@
 
 <body>
 
-   
-
     <!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
@@ -39,7 +37,11 @@
 </nav>
 
 
-
+<div class="rps-wrapper">
+    <ul id="events">
+        <li>Welcome to the game screen </li>
+    </ul>
+</div>
 
 
 
