--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -44,7 +44,7 @@
 
 </div>
 
-<p class="lead mb-3">Welcome <%- user.username; %> How are you </p>
+<p class="lead mb-3">Welcome <%- username %> How are you </p>
 
 <script>
 
