--- a/views/pages/battle.ejs
+++ b/views/pages/battle.ejs
@@ -41,7 +41,16 @@
     <ul id="events">
         <li>Welcome to the game screen </li>
     </ul>
+
+    <div class="button-wrapper">
+        <input id="chat">
+        <button id="One">One</button>
+        <button id="Two">Two</button>
+        <button id="Three">Three</button>
+        <button id="Send">Send</button>
+    </div>
 </div>
+<script type="text/javascript" src="../../Public/scripts/client.js"
 
 
 
