Linked client.js to ejs file

--- a/views/pages/battle.ejs
+++ b/views/pages/battle.ejs
@@ -39,7 +39,6 @@
 
 <div class="rps-wrapper">
     <ul id="events">
-        <li>Welcome to the game screen </li>
     </ul>
 
     <div class="button-wrapper">
@@ -50,8 +49,8 @@
         <button id="Send">Send</button>
     </div>
 </div>
-<script type="text/javascript" src="../../Public/scripts/client.js"
-
+<script src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="../scripts/client.js"></script>
 
 
 <!-- Footer -->
