Working server to client messaging

--- a/views/pages/battle.ejs
+++ b/views/pages/battle.ejs
@@ -42,11 +42,15 @@
     </ul>
 
     <div class="button-wrapper">
-        <input id="chat">
+
+        <form id="chat-form">
+            <input id="chat">
+             <button id="Send">Send</button>
+        </form>
+
         <button id="One">One</button>
         <button id="Two">Two</button>
         <button id="Three">Three</button>
-        <button id="Send">Send</button>
     </div>
 </div>
 <script src="/socket.io/socket.io.js"></script>
