Battle ssytem fully working

--- a/views/pages/battle.ejs
+++ b/views/pages/battle.ejs
@@ -44,15 +44,39 @@
       <div class="col-sm">
         <h5>Your Party</h5>
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://pokeres.bastionbot.org/images/pokemon/12.png" alt="Card image cap">
+            <img class="card-img-top" src="https://pokeres.bastionbot.org/images/pokemon/1.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title center">Butterfree</h5>
+              <h5 class="card-title center">Bulbasaur</h5>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Flying</li>
+              <li id="pokemon1" class="list-group-item">Grass</li>
             </ul>
 
           </div>
+
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="https://pokeres.bastionbot.org/images/pokemon/26.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title center">Mudkip</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li id="pokemon2" class="list-group-item">Water</li>
+            </ul>
+
+          </div>
+
+
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="https://pokeres.bastionbot.org/images/pokemon/45.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title center">Chimchar</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li id="pokemon3" class="list-group-item">Fire</li>
+            </ul>
+
+          </div>
+
 
           
           
@@ -71,9 +95,10 @@
                      <button id="Send">Send</button>
                 </form>
         
-                <button id="One">One</button>
-                <button id="Two">Two</button>
-                <button id="Three">Three</button>
+                <button id="Grass">Bulbasaur</button>
+                <button id="Water">Mudkip</button>
+                <button id="Fire">Chimchar</button>
+                
             </div>
         </div>
         <script src="/socket.io/socket.io.js"></script>
@@ -84,17 +109,7 @@
       <div class="col-sm">
         <h5>Enemy Party</h5>
 
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://pokeres.bastionbot.org/images/pokemon/26.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title center">Raichu</h5>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Electric</li>
-            </ul>
-
-          </div>
-
+       
          
       </div>
     </div>
