--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -66,17 +66,7 @@ hr.light {
 
 /* Pokedex Css Section */
 .card {
-  margin-top: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.card-title::first-letter {
-  text-transform: capitalize;
-}
-.card-title {
-  background-color: #3f3f3f;
-  color: #ffff;
-  width: 100%;
+  
 }
 .card-img-top {
   width: 50%;
@@ -85,8 +75,84 @@ hr.light {
   margin-right: auto;
 }
 
+.card-title::first-letter {
+  text-transform: capitalize;
+}
 
 
+/* Battle section */
+.battle-card {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 400px;
+  margin-bottom: 5%;
+}
+#Grass {
+  background-color: #08c246;
+  border: 1px solid #08c246;
+}
+#Grass:hover {
+  background-color: #06a13a;
+  border: 1px solid #06a13a;
+}
+#Water {
+  background-color: #18add6;
+  border: 1px solid #18add6;
+}
+#Water:hover {
+  background-color: #1290b3;
+  border: 1px solid #1290b3;
+}
+#Fire {
+  background-color: #ed8713;
+  border: 1px solid #ed8713;
+}
+#Fire:hover {
+  background-color: #d1760f;
+  border: 1px solid #d1760f;
+}
+.chat-form-container {
+	padding: 20px 30px;
+	background-color: var(--dark-color-a);
+}
+.chat-form-container form {
+	display: flex;
+}
+.chat-form-container input[type='text'] {
+	font-size: 16px;
+	padding: 5px;
+	height: 40px;
+	flex: 1;
+}
+.chat-wrapper {
+  background-color: rgb(255, 255, 255);
+  width: 500px;
+  height: 500px;
+  max-height: 500px;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid lightgrey;
+}
+.button-wrapper {
+  background-color: #3f3f3f;
+}
+.poke-button-wrapper {
+  padding: 20px 30px;
+  display: block;
+}
+#events {
+  flex-grow: 1;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid lightgrey;
+  overflow-y: scroll;
+}
+#events li {
+  padding: 10px 10px 10px 10px;
+}
 
 
 /*---Media Queries --*/
