--- a/views/pages/battle.ejs
+++ b/views/pages/battle.ejs
@@ -40,6 +40,8 @@
 <div class="container-fluid padding">
     <div class="row padding">
 
+        <h5 id="user-name" class="trainer-name"><%= username %></h5>
+
          <!-- Chat Collumn-->
         <div class="chat-wrapper">
             <ul id="events">
