Removed old images and added new ones

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -24,9 +24,6 @@
                     <a class="nav-link" href="/game/battle">Battle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="/user/login">Log In</a>
                 </li>
             </ul>
@@ -40,28 +37,19 @@
 
 	<ul class="carousel-indicators ">
 		<li data-targets="#slides" data-slide-to="0" class="active"></li>
-		<li data-targets="#slides" data-slide-to="1"></li>
-		<li data-targets="#slides" data-slide-to="2"></li>
 	</ul>
 
 	<div class="carousel-inner">
 
 		<div class="carousel-item active ">
-			<img src="./img/background.png">
+			<img src="./img/background.jpg">
 			<div class="carousel-caption">
-				<h1 class="display-2">Pokemon</h1>
+				<h1 class="display-2">Pokerumble</h1>
 				<h3>Web Systems Project</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">POKEDEX</button>
-				<button type="button" class="btn btn-primary btn-lg">BATTLE</button>
+				<p>Scroll down for info</p>
+				<button type="button" class="btn btn-outline-light btn-lg"><a class="link-button" href="/pokedex">POKEDEX</a></button>
+				<button type="button" class="btn btn-primary btn-lg"><a class="link-button" href="/game/battle">BATTLE</a></button>
 			</div>
-		</div>
-
-		<div class="carousel-item">
-			<img src="./img/background2.png">
-		</div>
-
-		<div class="carousel-item">
-			<img src="./img/background3.png">
 		</div>
 	</div>
 </div>
