--- a/Public/stylesheets/main.css
+++ b/Public/stylesheets/main.css
@@ -27,6 +27,14 @@ html, body {
   background-color: #de0909;
   border: 1px solid #de0909;
 }
+.link-button {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.link-button:hover {
+  color: #000;
+  text-decoration: none;
+}
 .carousel-inner img {
   width: 100%;
   height: 100%;
