Fixed navabr on each page

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -10,35 +10,31 @@
 
    
 
-    <!-- Top Nav Bar -->
+<!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img class="nav-logo" src="../../img/pokeball-logo.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pokedex">Pokedex</a>
-                </li>
-                <li class="nav-item">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pokedex">Pokedex</a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" href="/game/battle">Battle</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/user/login">Log In</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
+              </li>
+              <li class="nav-item active">
+                  <a class="nav-link" href="/user/login">Login</a>
+              </li>
+          </ul>
+      </div>
+  </div>
+  </nav>
 
 <!-- Log In Form-->
 <div class="row mt-5">
