--- a/views/pages/battle.ejs
+++ b/views/pages/battle.ejs
@@ -8,25 +8,23 @@
 <body>
 
     <!-- Top Nav Bar -->
+<!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img class="nav-logo" src="../../img/pokeball-logo.png"></a>
+        <a class="navbar-brand" href="#"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/pokedex">Pokedex</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/battle">Battle</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="/game/battle">Battle</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/user/login">Login</a>
@@ -34,7 +32,7 @@
             </ul>
         </div>
     </div>
-</nav>
+    </nav>
 
 
 <div class="container-fluid padding">
