--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/game/battle">Battle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/login">Log In</a>
+                    <a class="nav-link" href="/user/login">Login</a>
                 </li>
             </ul>
         </div>
