--- a/views/pages/pokedex.ejs
+++ b/views/pages/pokedex.ejs
@@ -9,10 +9,11 @@
 </head>
 
 <body onload="getPokedexKanto();">
-<!-- Top Nav Bar -->
+
+    <!-- Top Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
+        <a class="navbar-brand" href="#"><img class="nav-logo" src="./img/pokeball-logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,16 +29,12 @@
                     <a class="nav-link" href="/game/battle">Battle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/login">Log In</a>
+                    <a class="nav-link" href="/user/login">Login</a>
                 </li>
             </ul>
         </div>
     </div>
-</nav>
-
+    </nav>
 
 
 <!-- Holds all of the pokemon cards-->
